--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,7 @@
   <div id="login" class="login-container">
     <img src="serasa-experian-logo.png" alt="Logo">
     <a href="config.html">Configurações</a>
+    <a id="iframe-button" href="iframe.html">Exemplo em iFrame</a>
 
     <input id="legacyKey" type="text" placeholder="Chave legada" name="legacyKey">
     <button id="legacyButton" type="button">Entrar com método legado</button>
